src/test/resources/semantic/custom/reject/ifStatementVoidType.ul
void main() {
}

void foo() {
    if (bar()) {
    }
}

void bar() {
}